# partition-ms

./: .gitignore  README.md  pyproject.toml
src/partition_ms/: pipeline.py
src/partition_ms/apps/: break_by_snapshots.py
src/partition_ms/utils/: log_handler.py  tools.py
