[tool.poetry]
authors = ["A. Taqi"]
description = "partition a MeasurementSet v2"
name = "partition_ms"
repository = "https://github.com/alitaqiEngOx/partition-ms"
version = "0.1.0"

[build-systems]
build-backend = "poetry.core.masonry.api"
required = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
break-by-snapshots = "partition_ms.apps.break_by_snapshots:main"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
python-casacore = "3.6.1"